<resources>
    <string name="app_name">Leaderboard</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="headertext">LEADERBOARD</string>
    <string name="learning_leaders">Learning Leaders</string>
    <string name="skill_iq_leaders">SKILL IQ LEADERS</string>
    <string name="headerText">LEADERBOARD</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="project_on_github_link">Project on GITHUB (link)</string>
    <string name="submit">Submit</string>
    <string name="are_you_sure">Are you sure ?</string>
</resources>